--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <img src="logo.png">
   </div>
   <nav>
-    <span><a href="#">Mission</a></span>
-    <span><a href="#">Featured Tea</a></span>
-    <span><a href="#">Locations</a></span>
+    <span><a href="#mission">Mission</a></span>
+    <span><a href="#products">Featured Tea</a></span>
+    <span><a href="#locations">Locations</a></span>
   </nav>
 </header>
 
